fixed alignment moreDetails

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -95,8 +95,8 @@
 .moreDetails{
   font-size: .8em;
   display: flex;
-  margin-left: 20%;
   width: 60%;
+  justify-content: center;
   color:#9c9c9c;
   animation: beat 1s ease infinite;
 }
